RESOLVED FIXED277128
AVVideoCaptureSource should not update torch while setting camera preset
https://bugs.webkit.org/show_bug.cgi?id=277128
Summary AVVideoCaptureSource should not update torch while setting camera preset
youenn fablet
Reported 2024-07-26 01:01:23 PDT
AVVideoCaptureSource should not update torch while setting camera preset
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-26 01:01:36 PDT
youenn fablet
Comment 2 2024-07-26 01:02:06 PDT
This is a smaller workaround until we have https://bugs.webkit.org/show_bug.cgi?id=277088 fix.
EWS
Comment 3 2024-07-26 11:56:48 PDT
Committed 281410@main (a11cfdc1cd14): <https://commits.webkit.org/281410@main> Reviewed commits have been landed. Closing PR #31272 and removing active labels.
EWS
Comment 4 2024-07-29 06:42:54 PDT
Committed 280938.137@safari-7619-branch (5d441205ca0e): <https://commits.webkit.org/280938.137@safari-7619-branch> Reviewed commits have been landed. Closing PR #1502 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.