AVVideoCaptureSource should not update torch while setting camera preset rdar://132554327 https://bugs.webkit.org/show_bug.cgi?id=277128

Reviewed by Eric Carlson.

According testing, locking/unlocking an AVCaptureDevice within a session configuration can lead to issues.
In AVVideoCaptureSource, this leads to torch being turned of right after being turned off, if we change the camera preset at the same time.

To workaround this, we asynchronously change white balanche and torch.
The longer term plan is to refactor AVVideoCaptureSource in https://bugs.webkit.org/show_bug.cgi?id=277088, to do one beginConfiguration/lock/unlock/commitConfiguration per applyConstraints call.

We make sure to call startApplyingConstraints/endApplyingConstraints whenever calling updateTorch and updateWhiteBalanceMode.
Manually tested.

* Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::settingsDidChange):
(WebCore::AVVideoCaptureSource::setFrameRateAndZoomWithPreset):

Canonical link: https://commits.webkit.org/281410@main